add get topN questions
