# backend/routes.js
@@ -1,7 +1,14 @@
 // routes.js
 const express = require('express');
 const router = express.Router();
-const { getQuestion, createQuestion, updateQuestion, deleteQuestion, addComment } = require('./controllers/questionController');
+const {
+    getQuestion,
+    createQuestion,
+    updateQuestion,
+    deleteQuestion,
+    addComment,
+    getTopQuestions,
+} = require('./controllers/questionController');
 
 router.post('/question', createQuestion);
 router.get('/question/:id', getQuestion);
@@ -9,5 +16,6 @@ router.put('/question/:id', updateQuestion);
 router.delete('/question/:id', deleteQuestion);
 
 router.post('/question/:id/comment', addComment);
+router.get('/questions/top', getTopQuestions);
 
 module.exports = router;
